--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,27 +8,44 @@
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Brandon Williams</title>
 </head>
+
 <body>
     <header>
         <!-- The first link in the nav section of the page is inactive and will serve as the logo for the page. 
         The rest of the links have been given the class of nave-item to make styling them as simple as possible in the future.  -->
         <nav class="main-nav">
             <a href="#" class="logo">Brandon Williams</a>
-            <a href="index.html" class="nav-item">About Me</a>
             <a href="portfolio.html" class="nav-item">My Portfolio</a>
             <a href="contact.html" class="nav-item">Contact Me</a>
+            <a href="index.html" class="nav-item">About Me</a>
+
+
+
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="container clearfix">
             <h1>About Me</h1>
             <hr>
             <img src="assets/images/profilePhoto.png" alt="profile photo" id="profile-photo">
-            <p class="bio-text">Voluptatum ut aliquam rerum delectus. Laboriosam totam a temporibus sint numquam sed. Necessitatibus fugiat natus et libero culpa sapiente maxime. Sint necessitatibus cum voluptas repellendus facilis distinctio minima voluptas aliquam.
- 
-Temporibus commodi asperiores qui ullam tempore. Vitae suscipit velit sunt eos et voluptates numquam. Necessitatibus placeat sed aut.
- 
-Corrupti dicta porro earum consequatur officiis tempora amet laboriosam. Fugiat quibusdam quas quasi quos voluptas expedita rerum. Neque nihil ratione explicabo cumque et qui minima porro.</p>
+            <p class="bio-text">Voluptatum ut aliquam rerum delectus. Laboriosam totam a temporibus sint numquam sed.
+                Necessitatibus fugiat natus et libero culpa sapiente maxime. Sint necessitatibus cum voluptas
+                repellendus facilis distinctio minima voluptas aliquam.
+
+                Temporibus commodi asperiores qui ullam tempore. Vitae suscipit velit sunt eos et voluptates numquam.
+                Necessitatibus placeat sed aut.
+
+                Corrupti dicta porro earum consequatur officiis tempora amet laboriosam. Fugiat quibusdam quas quasi
+                quos voluptas expedita rerum. Neque nihil ratione explicabo cumque et qui minima porro.</p>
+            <p class="bio-text">Atque eius temporibus et. Nobis adipisci enim suscipit qui aut dolore asperiores. In ut illum est minus
+                quia.
+
+                Laboriosam recusandae aut et. Sint aliquid consequatur eligendi dolore. Ea repellendus laboriosam
+                incidunt omnis enim eius quia. Distinctio placeat error laborum aut eos aut a enim eligendi.
+
+                Blanditiis cupiditate et voluptas impedit ipsum rerum illum distinctio. Repudiandae ut natus aliquid
+                quas id. Qui modi quo ut. Soluta unde dignissimos vel et dolores et vel eius dignissimos. Ullam quae
+                nihil autem quisquam omnis sapiente animi.</p>
         </div>
     </main>
     <footer>
@@ -36,4 +54,5 @@ Corrupti dicta porro earum consequatur officiis tempora amet laboriosam. Fugiat 
         </div>
     </footer>
 </body>
+
 </html>
