centered homepage content area

--- a/contact.html
+++ b/contact.html
@@ -15,9 +15,12 @@
         The rest of the links have been given the class of nave-item to make styling them as simple as possible in the future.  -->
         <nav class="main-nav">
             <a href="#" class="logo">Brandon Williams</a>
-            <a href="index.html" class="nav-item">About Me</a>
             <a href="portfolio.html" class="nav-item">My Portfolio</a>
             <a href="contact.html" class="nav-item">Contact Me</a>
+            <a href="index.html" class="nav-item">About Me</a>
+
+
+
         </nav>
     </header>
     <main>
@@ -35,7 +38,8 @@
                 <br>
                 <label for="contact-message">*Message:</label>
                 <br>
-                <textarea name="contact-message-area" id="contact-message" cols="30" rows="10" placeholder="Please enter a brief message regrading your inquiry." required></textarea>
+                <textarea name="contact-message-area" id="contact-message" cols="30" rows="10"
+                    placeholder="Please enter a brief message regrading your inquiry." required></textarea>
                 <br>
                 <button type="submit" id="contact-submit-button">Submit</button>
                 <button type="reset" id="contact-reset-button">Reset</button>
