--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge"> -->
     <link rel="stylesheet" href="assets/css/style.css">
     <title>Brandon Williams</title>
 </head>
 
 <body>
     <header>
-        <!-- The first link in the nav section of the page is inactive and will serve as the logo for the page. 
-        The rest of the links have been given the class of nave-item to make styling them as simple as possible in the future.  -->
         <nav class="main-nav">
             <a href="#" class="logo">Brandon Williams</a>
             <a href="portfolio.html" class="nav-item">My Portfolio</a>
@@ -25,7 +23,7 @@
     </header>
     <main>
         <div class="container clearfix">
-            <h1>About Me</h1>
+            <h1 id="page-heading">About Me</h1>
             <hr>
             <img src="assets/images/profilePhoto.png" alt="profile photo" id="profile-photo">
             <p class="bio-text">Voluptatum ut aliquam rerum delectus. Laboriosam totam a temporibus sint numquam sed.
