--- a/portfolio.html
+++ b/portfolio.html
@@ -15,13 +15,16 @@
         The rest of the links have been given the class of nave-item to make styling them as simple as possible in the future.  -->
         <nav class="main-nav">
             <a href="#" class="logo">Brandon Williams</a>
-            <a href="index.html" class="nav-item">About Me</a>
             <a href="portfolio.html" class="nav-item">My Portfolio</a>
             <a href="contact.html" class="nav-item">Contact Me</a>
+            <a href="index.html" class="nav-item">About Me</a>
+
+
+
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="container clearfix">
             <h1>Portfolio</h1>
             <hr>
             <figure>
