Made slight spacing adjustments to content and image where required using margin settings

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="container clearfix">
-            <h1 id="page-heading">About Me</h1>
+            <h1 class="page-heading">About Me</h1>
             <hr>
             <img src="assets/images/profilePhoto.png" alt="profile photo" id="profile-photo">
             <p class="bio-text">Voluptatum ut aliquam rerum delectus. Laboriosam totam a temporibus sint numquam sed.
@@ -34,10 +34,9 @@
                 Necessitatibus placeat sed aut.
 
                 Corrupti dicta porro earum consequatur officiis tempora amet laboriosam. Fugiat quibusdam quas quasi
-                quos voluptas expedita rerum. Neque nihil ratione explicabo cumque et qui minima porro.</p>
-            <p class="bio-text">Atque eius temporibus et. Nobis adipisci enim suscipit qui aut dolore asperiores. In ut illum est minus
+                quos voluptas expedita rerum. Neque nihil ratione explicabo cumque et qui minima porro.
+                Atque eius temporibus et. Nobis adipisci enim suscipit qui aut dolore asperiores. In ut illum est minus
                 quia.
-
                 Laboriosam recusandae aut et. Sint aliquid consequatur eligendi dolore. Ea repellendus laboriosam
                 incidunt omnis enim eius quia. Distinctio placeat error laborum aut eos aut a enim eligendi.
 
