--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@
 
         </nav>
     </header>
-    <main>
+    <main class="clearfix">
         <div class="container clearfix">
             <h1>Portfolio</h1>
             <hr>
