added final bio text

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
             <h1 class="page-heading">About Me</h1>
             <hr>
             <img src="assets/images/profilePhoto.png" alt="profile photo" id="profile-photo">
-            <p class="bio-text">Voluptatum ut aliquam rerum delectus. Laboriosam totam a temporibus sint numquam sed.
-                Necessitatibus fugiat natus et libero culpa sapiente maxime. Sint necessitatibus cum voluptas
-                repellendus facilis distinctio minima voluptas aliquam.
-
-                Temporibus commodi asperiores qui ullam tempore. Vitae suscipit velit sunt eos et voluptates numquam.
-                Necessitatibus placeat sed aut.
-
-                Corrupti dicta porro earum consequatur officiis tempora amet laboriosam. Fugiat quibusdam quas quasi
-                quos voluptas expedita rerum. Neque nihil ratione explicabo cumque et qui minima porro.
-                Atque eius temporibus et. Nobis adipisci enim suscipit qui aut dolore asperiores. In ut illum est minus
-                quia.
-                Laboriosam recusandae aut et. Sint aliquid consequatur eligendi dolore. Ea repellendus laboriosam
-                incidunt omnis enim eius quia. Distinctio placeat error laborum aut eos aut a enim eligendi.
-
-                Blanditiis cupiditate et voluptas impedit ipsum rerum illum distinctio. Repudiandae ut natus aliquid
-                quas id. Qui modi quo ut. Soluta unde dignissimos vel et dolores et vel eius dignissimos. Ullam quae
-                nihil autem quisquam omnis sapiente animi.</p>
+            <p class="bio-text">My name is Brandon Williams and I am an aspiring Full Stack web developer. My overall
+                goal, is always to produce work that both meets an exceeds
+                what a client is looking for. I have over 7 years of education in the areas of I.T. Networking and
+                Security, and have been exposed to, and learning coding
+                and web development since my days in middle school. In the late days of 2019, I decided it was time for
+                a change. Having felt stuck in a rut for quite some time,
+                and feeling less than satisfied with where my life seemed to be heading, I decided to shift all of my
+                focus into learning Full Stack web development, where I felt
+                I would have the best chance at finding satisfaction, and letting my creative talents truly come to the
+                surface. To this end after much searching, I enrolled in the
+                University of Wisconsin Coding Bootcamp, and with renewed passion and enthusiasm started down the path
+                of yet another exciting adventure in life.
+                When I am not coding, or in the process of delving into learning about a new and interesting topic, I
+                can be found sitting at my piano, reading a book, or by his royal decree, (I just pay the rent)
+                showering attention
+                and the more than occasional belly rub on my cat Peanut.
+            </p>
         </div>
     </main>
     <footer>
