turned figcaptions into links also changed text values

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,26 +29,26 @@
             <hr>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption">Project Name</figcaption>
+                <figcaption class="portfolio-image-caption"><a href="#">Hangman</a></figcaption>
             </figure>
 
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption">Project Name</figcaption>
+                <figcaption class="portfolio-image-caption"><a href="#">RPG Game</a></figcaption>
             </figure>
             <br>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption">Project Name</figcaption>
+                <figcaption class="portfolio-image-caption"><a href="#">Trivia Game</a></figcaption>
             </figure>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption">Project Name</figcaption>
+                <figcaption class="portfolio-image-caption"><a href="#">Rutgers Info Widget</a></figcaption>
             </figure>
             <br>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption">Project Name</figcaption>
+                <figcaption class="portfolio-image-caption"><a href="#">Rock Paper Scissors</a></figcaption>
             </figure>
 
 
