Took code for portfolio page back to the state of commit 09b48745239a518d4e891008f0770baac942349d figcaptions are no longer links in working code. Testing branch will be used to test code before commiting to master from here on out.

--- a/portfolio.html
+++ b/portfolio.html
@@ -29,26 +29,26 @@
             <hr>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption"><a href="#">Hangman</a></figcaption>
+                <figcaption class="portfolio-image-caption">Hangman</figcaption>
             </figure>
 
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption"><a href="#">RPG Game</a></figcaption>
+                <figcaption class="portfolio-image-caption">RPG Game</figcaption>
             </figure>
             <br>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption"><a href="#">Trivia Game</a></figcaption>
+                <figcaption class="portfolio-image-caption">Trivia Game</figcaption>
             </figure>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption"><a href="#">Rutgers Info Widget</a></figcaption>
+                <figcaption class="portfolio-image-caption">Rutgers Info Widget</figcaption>
             </figure>
             <br>
             <figure>
                 <img src="https://via.placeholder.com/250" alt="placeholder image" class="portfolio-image">
-                <figcaption class="portfolio-image-caption"><a href="#">Rock Paper Scissors</a></figcaption>
+                <figcaption class="portfolio-image-caption">Rock Paper Scissors</figcaption>
             </figure>
 
 
